force-app/main/default/objects/ConteudoAplicado__c/ConteudoAplicado__c.object-meta.xml
<CustomObject>
    <label>Conteúdo Aplicado</label>
    <nameField>
        <label>Nome de Conteúdo Aplicado</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Conteúdos Aplicados</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>