force-app/main/default/objects/ConteudoAplicado__c/fields/ComplementoConteudo__c.field-meta.xml
<CustomField>
    <fullName>ComplementoConteudo__c</fullName>
    <label>Complemento do Conteúdo</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Conteudo__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACOPLAMENTO SINCRONIA DE MOVIMENTOS</fullName>
            </value>
            <value>
                <fullName>ADAPTABILIDADE (PROBLEMAS MOTORES)</fullName>
            </value>
            <value>
                <fullName>ANTECIPAÇÃO</fullName>
            </value>
            <value>
                <fullName>ANTES DO DRIBLE</fullName>
            </value>
            <value>
                <fullName>ARREMESSAR, PENETRAR OU PASSAR / PASSAR E CORTAR (GIVE AND GO) / JOGO EM LARGURA E PROFUNDIDADE</fullName>
            </value>
            <value>
                <fullName>ARREMESSAR, PENETRAR OU PASSAR / PASSAR E CORTAR (GIVE AND GO) / JOGO EM LARGURA E PROFUNDIDADE - FINTAS DE PASSE</fullName>
            </value>
            <value>
                <fullName>ARREMESSAR, PENETRAR OU PASSAR / PASSAR E CORTAR (GIVE AND GO) / JOGO EM LARGURA E PROFUNDIDADE - OMBRO</fullName>
            </value>
            <value>
                <fullName>ARREMESSAR, PENETRAR OU PASSAR / PASSAR E CORTAR (GIVE AND GO) / JOGO EM LARGURA E PROFUNDIDADE - PEITO</fullName>
            </value>
            <value>
                <fullName>ARREMESSAR, PENETRAR OU PASSAR / PASSAR E CORTAR (GIVE AND GO) / JOGO EM LARGURA E PROFUNDIDADE - PICADO</fullName>
            </value>
            <value>
                <fullName>ARREMESSO SALTANDO</fullName>
            </value>
            <value>
                <fullName>BACKDOOR</fullName>
            </value>
            <value>
                <fullName>BANDEJA</fullName>
            </value>
            <value>
                <fullName>COSTAS</fullName>
            </value>
            <value>
                <fullName>DESLOCAR PARA RECEBER EM FUNÇÃO DO PASSE</fullName>
            </value>
            <value>
                <fullName>DIFERENCIAÇÃO (PRECISÃO E EFICIÊNCIA)</fullName>
            </value>
            <value>
                <fullName>DUPLOS</fullName>
            </value>
            <value>
                <fullName>DURANTE O DRIBLE</fullName>
            </value>
            <value>
                <fullName>EM L</fullName>
            </value>
            <value>
                <fullName>EM MOVIMENTO</fullName>
            </value>
            <value>
                <fullName>EM V</fullName>
            </value>
            <value>
                <fullName>EQUILIBRIO</fullName>
            </value>
            <value>
                <fullName>FINTA DE ARREMESSO</fullName>
            </value>
            <value>
                <fullName>FINTAS DE PASSE</fullName>
            </value>
            <value>
                <fullName>FLEXIBILIDADE</fullName>
            </value>
            <value>
                <fullName>FLUTUAR OU PRESSIONAR; JOGADOR-BOLA-CESTA</fullName>
            </value>
            <value>
                <fullName>FORÇA</fullName>
            </value>
            <value>
                <fullName>GIRO</fullName>
            </value>
            <value>
                <fullName>LATERAL</fullName>
            </value>
            <value>
                <fullName>MEMÓRIA</fullName>
            </value>
            <value>
                <fullName>OMBRO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>