force-app/main/default/objects/ConteudoAplicado__c/fields/Dimensao__c.field-meta.xml
<CustomField>
    <fullName>Dimensao__c</fullName>
    <label>Dimensão</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>DESENVOLVIMENTO ESPORTIVO</fullName>
            </value>
            <value>
                <fullName>DESENVOLVIMENTO SOCIOEMOCIONAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>