force-app/main/default/objects/ConteudoAplicado__c/fields/PlanoTreino__c.field-meta.xml
<CustomField>
    <fullName>PlanoTreino__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plano de treino</label>
    <referenceTo>PlanoTreino__c</referenceTo>
    <relationshipLabel>Conteúdos Aplicados</relationshipLabel>
    <relationshipName>ConteudosAplicados</relationshipName>
    <type>Lookup</type>
</CustomField>