force-app/main/default/objects/ConteudoAplicado__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Estrutura__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>TÁTICO</fullName>
            </value>
            <value>
                <fullName>TÉCNICO</fullName>
            </value>
            <value>
                <fullName>AMOR</fullName>
            </value>
            <value>
                <fullName>HUMILDADE</fullName>
            </value>
            <value>
                <fullName>DISCIPLINA</fullName>
            </value>
            <value>
                <fullName>CORAGEM</fullName>
            </value>
            <value>
                <fullName>TRABALHO EM EQUIPE</fullName>
            </value>
            <value>
                <fullName>SUPERAÇÃO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>